--- a/src/Components/CountryCard.css
+++ b/src/Components/CountryCard.css
@@ -1,19 +1,17 @@
   
 .country-card {
-    align-items: center;
-    background-blend-mode: saturation;
-    background-size: 100% 100%;
-    background-color: #5C5E5F;
-    background-blend-mode: screen, difference, darken;
-    box-shadow: 8px 8px 30px white;
-    display: flex;
-    flex-direction: column;
-    height: 150px;
-    margin: 20px;
-    padding: 20px;
-    justify-content: space-around;
-    width: 165px;
-    cursor: pointer;
+  align-items: center;
+  background-color: lightseagreen;
+  background-blend-mode: screen, difference, darken;
+  box-shadow: 1px 1px 10px white;
+  display: flex;
+  flex-direction: column;
+  height: 150px;
+  margin: 20px;
+  padding: 20px;
+  justify-content: space-around;
+  width: 165px;
+  cursor: pointer;
   }
   
   .country-card:hover {
