--- a/src/Components/Header.css
+++ b/src/Components/Header.css
@@ -7,12 +7,26 @@
 }
 
 input{ 
-    width: 40%;
+    width: 39%;
     height: 20px;
     border-radius: 5px;
     outline: none;
+    text-align: center;
+    margin: 5px;
 }
 
 .header-title{
     font-size: 40px;
+}
+
+.searchContainer{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+button{
+    width: 40%;
+    border-radius: 8px;
+    height: 30px;
+    margin: 5px;
 }
